// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MicroAppsAPIGwy works with no params 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "constructgwyE80472DA": {
      "Properties": {
        "Name": "stack-microapps",
        "ProtocolType": "HTTP",
        "Tags": {
          "microapp-managed": "true",
        },
      },
      "Type": "AWS::ApiGatewayV2::Api",
    },
    "constructlogsBC77618C": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": "/aws/apigwy/stack-microapps",
        "RetentionInDays": 14,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "constructlogsrole387D81E6": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "constructlogsroleDefaultPolicyD4FA927F": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "constructlogsBC77618C",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "constructlogsroleDefaultPolicyD4FA927F",
        "Roles": [
          {
            "Ref": "constructlogsrole387D81E6",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "constructstage3B55CA4F": {
      "Properties": {
        "AccessLogSettings": {
          "DestinationArn": {
            "Fn::GetAtt": [
              "constructlogsBC77618C",
              "Arn",
            ],
          },
          "Format": "{"requestId":"$context.requestId","userAgent":"$context.identity.userAgent","sourceIp":"$context.identity.sourceIp","requestTime":"$context.requestTime","requestTimeEpoch":"$context.requestTimeEpoch","httpMethod":"$context.httpMethod","path":"$context.path","status":"$context.status","protocol":"$context.protocol","responseLength":"$context.responseLength","domainName":"$context.domainName","authorizerError":"$context.authorizer.error"}",
        },
        "ApiId": {
          "Ref": "constructgwyE80472DA",
        },
        "AutoDeploy": true,
        "StageName": "$default",
        "Tags": {
          "microapp-managed": "true",
        },
      },
      "Type": "AWS::ApiGatewayV2::Stage",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`MicroAppsAPIGwy works with params 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "cert56CA94EB": {
      "Properties": {
        "DomainName": "*.test.pwrdrvr.com",
        "DomainValidationOptions": [
          {
            "DomainName": "*.test.pwrdrvr.com",
            "ValidationDomain": "pwrdrvr.com",
          },
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "stack/cert",
          },
        ],
        "ValidationMethod": "EMAIL",
      },
      "Type": "AWS::CertificateManager::Certificate",
    },
    "constructapimaporigin7C2B9F89": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "constructorigindnDD3F36CE",
        "constructstage3B55CA4F",
      ],
      "Properties": {
        "ApiId": {
          "Ref": "constructgwyE80472DA",
        },
        "DomainName": {
          "Ref": "constructorigindnDD3F36CE",
        },
        "Stage": "/myprefix/",
      },
      "Type": "AWS::ApiGatewayV2::ApiMapping",
      "UpdateReplacePolicy": "Delete",
    },
    "constructgwyE80472DA": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Name": "mydeploy-mysuffix",
        "ProtocolType": "HTTP",
        "Tags": {
          "microapp-managed": "true",
        },
      },
      "Type": "AWS::ApiGatewayV2::Api",
      "UpdateReplacePolicy": "Delete",
    },
    "constructlogsBC77618C": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "LogGroupName": "/aws/apigwy/mydeploy-mysuffix",
        "RetentionInDays": 14,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "constructlogsrole387D81E6": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "apigateway.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "constructlogsroleDefaultPolicyD4FA927F": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "constructlogsBC77618C",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "constructlogsroleDefaultPolicyD4FA927F",
        "Roles": [
          {
            "Ref": "constructlogsrole387D81E6",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "constructmapping8BB481CC": {
      "DependsOn": [
        "constructmicroappsappsedgedn308BF2C3",
        "constructstage3B55CA4F",
      ],
      "Properties": {
        "ApiId": {
          "Ref": "constructgwyE80472DA",
        },
        "DomainName": {
          "Ref": "constructmicroappsappsedgedn308BF2C3",
        },
        "Stage": "/myprefix/",
      },
      "Type": "AWS::ApiGatewayV2::ApiMapping",
    },
    "constructmicroappsappsedgedn308BF2C3": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "DomainName": "mydeploy.test.pwrdrvr.com",
        "DomainNameConfigurations": [
          {
            "CertificateArn": {
              "Ref": "cert56CA94EB",
            },
            "EndpointType": "REGIONAL",
          },
        ],
      },
      "Type": "AWS::ApiGatewayV2::DomainName",
      "UpdateReplacePolicy": "Delete",
    },
    "constructoriginarecord70039239": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "AliasTarget": {
          "DNSName": {
            "Fn::GetAtt": [
              "constructorigindnDD3F36CE",
              "RegionalDomainName",
            ],
          },
          "HostedZoneId": {
            "Fn::GetAtt": [
              "constructorigindnDD3F36CE",
              "RegionalHostedZoneId",
            ],
          },
        },
        "HostedZoneId": {
          "Ref": "zoneEB40FF1E",
        },
        "Name": "mydeploy-origin.test.pwrdrvr.com.",
        "Type": "A",
      },
      "Type": "AWS::Route53::RecordSet",
      "UpdateReplacePolicy": "Delete",
    },
    "constructorigindnDD3F36CE": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "DomainName": "mydeploy-origin.test.pwrdrvr.com",
        "DomainNameConfigurations": [
          {
            "CertificateArn": {
              "Ref": "cert56CA94EB",
            },
            "EndpointType": "REGIONAL",
          },
        ],
      },
      "Type": "AWS::ApiGatewayV2::DomainName",
      "UpdateReplacePolicy": "Delete",
    },
    "constructstage3B55CA4F": {
      "Properties": {
        "AccessLogSettings": {
          "DestinationArn": {
            "Fn::GetAtt": [
              "constructlogsBC77618C",
              "Arn",
            ],
          },
          "Format": "{"requestId":"$context.requestId","userAgent":"$context.identity.userAgent","sourceIp":"$context.identity.sourceIp","requestTime":"$context.requestTime","requestTimeEpoch":"$context.requestTimeEpoch","httpMethod":"$context.httpMethod","path":"$context.path","status":"$context.status","protocol":"$context.protocol","responseLength":"$context.responseLength","domainName":"$context.domainName","authorizerError":"$context.authorizer.error"}",
        },
        "ApiId": {
          "Ref": "constructgwyE80472DA",
        },
        "AutoDeploy": true,
        "StageName": "/myprefix/",
        "Tags": {
          "microapp-managed": "true",
        },
      },
      "Type": "AWS::ApiGatewayV2::Stage",
    },
    "zoneEB40FF1E": {
      "Properties": {
        "Name": "test.pwrdrvr.com.",
      },
      "Type": "AWS::Route53::HostedZone",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
